add Product ReactJs Page

--- a/src/Rookie.Ecom.Web/ClientApp/silent_renew/silent_renew.html
+++ b/src/Rookie.Ecom.Web/ClientApp/silent_renew/silent_renew.html
@@ -1,1 +1,2 @@
-<!DOCTYPE html><html><head></head><body></script></body></html>
+<!DOCTYPE html><html><head></head><body>
+    <script></script></body></html>
